@@ -1,21 +1,20 @@
 package com.sprint.mission.discodeit.repository.jcf;
 
-import com.sprint.mission.discodeit.dto.request.BinaryContentCreateRequest;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
-@Repository("binaryContentRepository")
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "jcf", matchIfMissing = true)
+@Repository
 public class JCFBinaryContentRepository implements BinaryContentRepository {
     private final Map<UUID, BinaryContent> data;
 
     public JCFBinaryContentRepository() {
         this.data = new HashMap<>();
     }
-
 
     @Override
     public BinaryContent save(BinaryContent binaryContent) {
@@ -30,7 +29,9 @@ public class JCFBinaryContentRepository implements BinaryContentRepository {
 
     @Override
     public List<BinaryContent> findAllByIdIn(List<UUID> ids) {
-        return this.data.values().stream().filter(binaryContent -> ids.contains(binaryContent.getId())).collect(Collectors.toList());
+        return this.data.values().stream()
+                .filter(content -> ids.contains(content.getId()))
+                .toList();
     }
 
     @Override
@@ -41,12 +42,5 @@ public class JCFBinaryContentRepository implements BinaryContentRepository {
     @Override
     public void deleteById(UUID id) {
         this.data.remove(id);
-    }
-
-    @Override
-    public void deleteByAttachmentId(List<UUID> attachmentIds) {
-       this.data.entrySet().removeIf(entry
-               -> entry.getValue().getAttachmentIds().stream()
-               .anyMatch(attachmentIds::contains));
     }
 }
